inconsistency fix: really hide message only on user interaction

FIXED-IN: 4.11.2
BUG: 321766